# CPEN333_Project

./: .gitignore  CMakeLists.txt  README.md  headers.h
archive/: Layout_archived.h
data/: itemList.txt  layout0.txt  layout1.txt  layout2.txt
header/: Amazoom.h  Amazoom.h.orig  Cell.h  Coordinate.h  DeliveryTruck.h  DynamicQueue.h  DynamicQueue.h.orig  InventoryDatabase.h  Item.h  JsonConverter.h  Layout.h  Layout_archived.h  ManagerUI.h  Message.h  Order.h  Order.h.orig  Quote.h  RemoteWebServer.h  RemoteWebserver.h  RestockTruck.h  Robot.h  Truck.h  TruckInfo.h  UserInterface.h  UserInterface.h.orig  Warehouse.h  WarehouseComputer.h  WarehouseComputerAPI.h  jsonConverter.h
proposal/: combine_headers.py  headers.h
src/: LayoutGUI.cpp  Message.h  Warehouse.cpp  amazoom_client.cpp  amazoom_server.cpp
